--- a/css/pattern.css
+++ b/css/pattern.css
@@ -1,7 +1,34 @@
 .pattern {
-  width: 425px;
-  height: 400px;
-  background-image: url("../images/pattern.png");
-  background-size: 80px 80px;
-  background-repeat: repeat;
-}
+    display: grid;
+    width: 320px;
+    height: 320px;
+    grid-template-columns: repeat(auto-fit, 20px);
+    grid-template-rows: repeat(auto-fit, 20px);
+  }
+  .pattern > div {
+    width: 20px;
+    height: 20px;
+    border: 1px solid white;
+  }
+  
+  .pattern div:nth-child(3n + 4) {
+    background-color: #6495ed;
+  }
+  .pattern div:nth-child(3n + 2) {
+    background-color: black;
+  }
+  .pattern div:nth-child(3n + 3) {
+    background-color: #dc143c;
+  }
+ .pattern div:first-child {
+    background-color: #6495ed;
+  }
+  
+  .pattern div:nth-child(2) {
+    background-color: black;
+  }
+  
+  .pattern div:nth-child(3) {
+    background-color: #dc143c;
+  }
+  
