--- a/css/pattern.css
+++ b/css/pattern.css
@@ -10,25 +10,16 @@
     height: 20px;
     border: 1px solid white;
   }
-  
+  .pattern div:first-child,
   .pattern div:nth-child(3n + 4) {
     background-color: #6495ed;
   }
+  .pattern div:nth-child(2), 
   .pattern div:nth-child(3n + 2) {
     background-color: black;
   }
+  .pattern div:nth-child(3),
   .pattern div:nth-child(3n + 3) {
-    background-color: #dc143c;
-  }
- .pattern div:first-child {
-    background-color: #6495ed;
-  }
-  
-  .pattern div:nth-child(2) {
-    background-color: black;
-  }
-  
-  .pattern div:nth-child(3) {
     background-color: #dc143c;
   }
   
